fix: update modals for legal disclosure not showing in the mobile viewport (DTCRCMERC-1565) (#842)

--- a/src/components/modal/v2/parts/views/ShortTerm/styles.scss
+++ b/src/components/modal/v2/parts/views/ShortTerm/styles.scss
@@ -36,6 +36,10 @@
                     background-color: transparent;
                 }
 
+                @include smallHeightMobile {
+                    min-height: 8em;
+                }
+
                 &__container {
                     display: flex;
                     align-items: center;
@@ -117,6 +121,10 @@
                         width: 100%;
                     }
 
+                    @include smallHeightMobile {
+                        margin-bottom: 0.2rem;
+                    }
+
                     .instructions__bullet {
                         @include desktop {
                             line-height: 25px;
@@ -126,6 +134,12 @@
                     li {
                         font-size: 1.125rem;
                         line-height: 24px;
+
+                        @include smallHeightMobile {
+                            line-height: 21px;
+                            font-size: 1.1rem;
+                            padding-bottom: 6px;
+                        }
                     }
                 }
             }
@@ -133,6 +147,10 @@
             &.disclosure {
                 @include desktop {
                     padding-top: 16px;
+                }
+
+                @include smallHeightMobile {
+                    padding-top: 0;
                 }
             }
 
